[package]
name = "alps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good_lp = { version = "1.7.0", features = ["minilp"], default-features = false  }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
meval = "0.2"
fasteval = "0.2.4"
