[package]
name = "alps"
version = "0.1.0"
edition = "2021"
description = "A simple linear programming solver"
license = "MIT"
authors = ["David Holtz <github.com/drbh>"]

[dependencies]
# core dependencies
good_lp = { version = "1.7.0", features = ["minilp"], default-features = false }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
# interface dependencies
clap = { version = "4.5.1", features = ["derive"] }
